<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_primary"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/logos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="28dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logopolosan"
            android:layout_marginBottom="11dp"
            android:contentDescription="@string/logo1" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="28dp"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Buat Akun"
                android:gravity="center_horizontal"
                android:textSize="30sp"
                android:fontFamily="sans-serif-condensed"
                android:textStyle="bold"
                android:id="@+id/title"
                android:textColor="@color/my_primary"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nama lengkap"
                android:fontFamily="sans-serif-condensed-light"
                android:textSize="11sp"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:inputType="textPersonName"
                android:contentDescription="@string/masukkan_nama_lengkap_anda_di_sini" />
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bidang"
                android:fontFamily="sans-serif-condensed-light"
                android:textSize="11sp"
                android:textStyle="bold"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:inputType="text"
                android:contentDescription="@string/masukkan_kelas_anda_di_sini"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="NIP"
                android:fontFamily="sans-serif-condensed-light"
                android:textSize="11sp"
                android:textStyle="bold"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:inputType="number"
                android:contentDescription="@string/masukkan_nisn_anda_di_sini"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>